# mk-home

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py
.github/workflows/: build.yml
drivers/: CMakeLists.txt
drivers/include/: bsp.h
drivers/include/actuators/: led.h
drivers/include/mcu/: mcu.h
drivers/include/sensors/: ntc.h
drivers/ports/ESP32/: bsp.cpp
drivers/ports/ESP32/actuators/: led.cpp
drivers/ports/ESP32/mcu/: ESP32_MCU.cpp  ESP32_MCU.h
drivers/ports/ESP32/sensors/: ESP32NTC.cpp  ESP32NTC.h
drivers/ports/mbed-common/: bsp.cpp
drivers/ports/mbed-common/actuators/: led.cpp
fsm/: CMakeLists.txt
mk-home-http/: CMakeLists.txt
mk-home-http/include/: http.h  root_ca.h
mk-home-http/ports/ESP32/: ESP32_http.cpp  ESP32_http.h
mk-home-http/ports/mbed-common/: http.cpp
mk-home-mqtt/: CMakeLists.txt
mk-home-mqtt/include/: mqtt.h
mk-home-mqtt/ports/ESP32/: mqtt.cpp
mk-home-mqtt/ports/mbed-common/: mqtt.cpp
src/: CMakeLists.txt  main.cpp
wifi/: CMakeLists.txt
wifi/include/: wifi.h
wifi/ports/ESP32/: wifi.cpp
wifi/ports/ESP32/include/: esp32_wifi.h
